functional Totem tileentity & village capture command & updated faction villager (#522)
* recode TotemTileEntity,
removed FactionVillager for VillageProfessions & Tradelists(maybe modify profession textures),
fixed aggressive villager (maybe other texture),
moved all villagetrades to ModVillage,
converted villager schedule is 12000 ticks (a half day) turned,
village capture command

* fix

* Fix weapons.
Increase durability of obsidian armor and vampire swords

* More improvements

* Fix spawns

* Add 1.14 warning

* addition

* More improvements

* Fix spawns

* Update 1.14 warning
Remove spawn eggs again

* Update travis

* moved trades,
make agressive fix

* moved trades,
makeAgressive fix
modified trades,
bug fixes

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -95,7 +95,6 @@
   "text.vampirism.village.faction_village_under_attack": "A nearby %s village is under attack from %s",
   "text.vampirism.village.almost_captured": "Village almost captured. %s defenders left",
   "text.vampirism.village.bossinfo.capture": "Village capturing progress",
-  "text.vampirism.village.no_near_village": "No village nearby",
   "text.vampirism.village.defender_remaining": "Defender remaining",
   "text.vampirism.hunter_villager.trade_successful": "Thank you for hunting down those vampires",
   "text.vampirism.hunter_villager.decline_trade_vampire": "I do not trade with wicked vampires",
@@ -327,6 +326,11 @@
   "text.vampirism.altar_infusion.ritual_night_only": "You can only perform this ritual at night",
   "text.vampirism.weapon_table.cannot_use": "You have not learned how to use this",
   "text.vampirism.blood_potion_table.cannot_use": "You have not learned how to use this",
+  "text.vampirism.village.no_faction": "You have to be in a faction",
+  "text.vampirism.village.capture_in_progress": "There is already a capture in progress",
+  "text.vampirism.village.same_faction": "You can not attack a village owned by your faction",
+  "text.vampirism.village.no_near_village": "No village nearby",
+  "text.vampirism.village.othertotem": "This totem doesn't work. Search for another one",
   "__comment": "container/tileentity/screen",
   "tile.vampirism.blood_grinder": "Blood Grinder",
   "tile.vampirism.alchemical_cauldron": "Alchemical Cauldron",
@@ -383,6 +387,8 @@
   "block.vampirism.blood_grinder": "Blood Grinder",
   "block.vampirism.blood_sieve": "Blood Sieve",
   "block.vampirism.totem_top": "Village totem top",
+  "block.vampirism.totem_top_hunter": "Village totem top",
+  "block.vampirism.totem_top_vampire": "Village totem top",
   "block.vampirism.totem_base": "Village totem base",
   "block.vampirism.castle_slab_dark_brick": "Dark Brick Slab",
   "block.vampirism.castle_slab_purple_brick": "Purple Brick Slab",
@@ -553,6 +559,8 @@
   "command.vampirism.test.garlicprofiler.print": "%s: %s|%s",
   "command.vampirism.test.garliccheck.strength": "garlic strength: %s",
   "command.vampirism.test.entity.notbiteable": "Not biteable %s",
+  "command.vampirism.test.village.no_village": "No village nearby",
+  "command.vampirism.test.village.success": "Successfully converted village to faction %s",
   "command.vampirism.argument.skill.notfound": "The given skill %s does not exist",
   "command.vampirism.argument.action.notfound": "The given action %s does not exist",
   "command.vampirism.argument.faction.notfound": "The given faction %s does not exist",
@@ -584,7 +592,8 @@
   "entity.vampirism.villager_hunter_faction": "Hunter Expert",
   "entity.Villager.vampirism.hunter_priest": "Alchemical Priest",
   "entity.Villager.vampirism.vampire_expert": "Vampire Expert",
-  "entity.Villager.vampirism.hunter_expert": "Hunter Expert",
+  "entity.minecraft.villager.vampirism.hunter_expert": "Hunter Expert",
+  "entity.minecraft.villager.vampirism.vampire_expert": "Vampire Expert",
   "__comment": "minioncommands",
   "minioncommand.vampirism.attackhostilenoplayers": "Attack hostile",
   "minioncommand.vampirism.attackhostile": "Attack hostile including player",
