Totem related stuff
failsafe: used IFaction instead of IPlayableFaction in TotemTileEntity (option for new features & no casting to IPlayableFaction),
fixed translation key,
forced faction if TotemTopBlock is registered for faction (spawn pre captured village),
removed old village files,
capture command converts all entities

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -327,7 +327,7 @@
   "text.vampirism.weapon_table.cannot_use": "You have not learned how to use this",
   "text.vampirism.blood_potion_table.cannot_use": "You have not learned how to use this",
   "text.vampirism.village.no_faction": "You have to be in a faction",
-  "text.vampirism.village.capture_in_progress": "There is already a capture in progress",
+  "text.vampirism.village.capturing_in_progress": "There is already a capture in progress",
   "text.vampirism.village.same_faction": "You can not attack a village owned by your faction",
   "text.vampirism.village.no_near_village": "No village nearby",
   "text.vampirism.village.othertotem": "This totem doesn't work. Search for another one",
@@ -387,8 +387,8 @@
   "block.vampirism.blood_grinder": "Blood Grinder",
   "block.vampirism.blood_sieve": "Blood Sieve",
   "block.vampirism.totem_top": "Village totem top",
-  "block.vampirism.totem_top_hunter": "Village totem top",
-  "block.vampirism.totem_top_vampire": "Village totem top",
+  "block.vampirism.totem_top_vampirism_hunter": "Village totem top",
+  "block.vampirism.totem_top_vampirism_vampire": "Village totem top",
   "block.vampirism.totem_base": "Village totem base",
   "block.vampirism.castle_slab_dark_brick": "Dark Brick Slab",
   "block.vampirism.castle_slab_purple_brick": "Purple Brick Slab",
