WIP JEI update as well as version checker fix

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -191,7 +191,7 @@
   "text.vampirism.sword_charged": "Charged:",
   "text.vampirism.sword_trained": "Trained:",
   "text.vampirism.integrations_available.first": "There is an integrations mod for Vampirism that adds enhanced compatibility for the following installed mods:",
-  "text.vampirism.integrations_available.second": "[\"Please consider downloading this mod for an improved experience [\",{\"text\":\"Download\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the mod page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@download@\"}},\"]\"]",
+  "text.vampirism.integrations_available.download": "Click here to go to the mod page",
   "text.vampirism.trainer_disabled": "I am not a hunter",
   "text.vampirism.trainer_disabled_hunter": "It is not safe enought to train you here. Please free the village.",
   "text.vampirism.actions.bind_action": "Bound action %s to action key %s",
@@ -362,7 +362,9 @@
   "__comment": "biome",
   "biome.vampirism.vampire_forest": "Vampire Forest",
   "__comment": "text",
-  "text.vampirism.update_message": "[\"Click for... [\",{\"text\":\"Download\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the download page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@download@\"}},\"] [\",{\"text\":\"Website\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the mod's forum page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@forum@\"}},\"] [\",{\"text\":\"Changelog\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this see the version's Changelog\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"run_command\",\"value\":\"/vampirism changelog\"}},\"]\"]",
+  "text.vampirism.update_message.download": "Download",
+  "text.vampirism.update_message.changelog": "Changelog",
+  "text.vampirism.update_message.modpage": "Mod Page",
   "__comment": "blocks",
   "block.vampirism.castle_block_dark_stone": "Dark Stone",
   "block.vampirism.castle_block_normal_brick": "Stone Brick",
