--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -139,6 +139,7 @@
   "text.vampirism.not_enough_blood": "There is not enough blood in the altar",
   "text.vampirism.ritual_requirements_not_met": "Not all requirements for this ritual were met",
   "text.vampirism.ritual_no_vampire": "You need to be a vampire for this ritual",
+  "text.vampirism.cant_fly_umbrella": "You cannot fly with an umbrella equipped",
   "text.vampirism.cant_fly_day": "You cannot fly at daytime",
   "text.vampirism.cant_fly_garlic": "You cannot fly under the effect of garlic",
   "text.vampirism.cant_fly_end": "You are not able to transfrom into a bat in the End",
@@ -471,6 +472,7 @@
   "item.vampirism.blood_bucket": "Blood Bucket",
   "item.vampirism.impure_blood_bucket": "Impure Blood Bucket",
   "item.vampirism.garlic_bread": "Garlic Bread",
+  "item.vampirism.umbrella": "Umbrella",
   "__comment": "item_old",
   "item.vampirism.vampires_fear": "Vampire's fear",
   "item.vampirism.torch": "Torch",
