--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -134,6 +134,7 @@
   "death.attack.vampire_in_fire.player": "%1$s was incinerated by %2$s",
   "death.attack.holy_water": "%1$s was burned with holy water",
   "death.attack.holy_water.player": "%2$s burned %1$s with holy water",
+  "death.attack.blood_loss": "%1$s was sucked dry",
   "text.vampirism.skill.level_to_low": "Your vampire level is too low for that",
   "text.vampirism.skill.cooldown_not_over": "Please wait until the cooldown is over",
   "text.vampirism.not_enough_blood": "There is not enough blood in the altar",
