--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -119,7 +119,7 @@
   "text.vampirism.required_skill": "Required Skill: %s",
   "text.vampirism.from_behind": "From behind.",
   "text.vampirism.unknown": "Unknown",
-  "text.vampirism.basic_hunter.cannot_train_you_any_further": "I cannot train you any further",
+  "text.vampirism.basic_hunter.cannot_train_you_any_further": "I cannot train you any further. You have to look for someone with more experience.",
   "text.vampirism.basic_hunter.pay_n_vampire_blood_more": "Please pay me %s more vampire blood bottles to train you",
   "text.vampirism.basic_hunter.i_will_train_you": "Alright, I will train you",
   "text.vampirism.i_am_busy_right_now": "I'm busy right now",
@@ -320,7 +320,7 @@
   "skill.vampirism.holy_water_enhanced.desc": "Create enhanced Holy Water instead of normal one.",
   "skill.vampirism.garlic_beacon_improved.desc": "Learn how to craft a garlic diffuser with a higher range",
   "__comment": "interaction",
-  "text.vampirism.hunter_trainer.trainer_level_wrong": "This trainer cannot train you at your level",
+  "text.vampirism.hunter_trainer.trainer_level_wrong": "I don't train hunters as inexperienced as you are. Look for someone less experienced",
   "text.vampirism.alchemical_cauldron.other": "This cauldron belongs to %s. You should not use it.",
   "text.vampirism.alchemical_cauldron.cannot_use": "You have not learned how to use this",
   "text.vampirism.altar_infusion.ritual_missing_times": "You are missing items for this ritual",
