--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -83,6 +83,7 @@
   "gui.vampirism.name_sword.text": "Do you want to give this sword a name?",
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
+  "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
   "text.vampirism.village.faction_capturing": "%s are capturing this village",
   "text.vampirism.village.faction_controlling": "%s are controlling this village",
   "text.vampirism.village.neutral": "Neutral village",
