add hunter only sleepable tents

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -150,8 +150,14 @@
   "text.vampirism.coffin.too_far_away": "You may not rest now; the coffin is too far away",
   "text.vampirism.coffin.obstructed": "This coffin is obstructed",
   "text.vampirism.coffin.occupied": "This coffin is occupied",
-  "text.vampirism.coffin.stopsleeping": "Leave coffin",
+  "text.vampirism.coffin.stop_sleeping": "Leave Coffin",
   "text.vampirism.coffin.cant_use": "You can't sleep in a coffin",
+  "text.vampirism.tent.no_sleep": "You can sleep only at night and during thunderstorms",
+  "text.vampirism.tent.too_far_away": "You may not rest now; the tent is too far away",
+  "text.vampirism.tent.obstructed": "This tent is obstructed",
+  "text.vampirism.tent.occupied": "This tent is occupied",
+  "text.vampirism.tent.stop_sleeping": "Leave Tent",
+  "text.vampirism.tent.cant_use": "You can't sleep in a tent",
   "text.vampirism.blood_left": "Blood left",
   "text.vampirism.blood": "blood",
   "text.vampirism.vampirelevel": "Vampirelevel",
