Add enchantment descriptions. Close #624

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -84,6 +84,9 @@
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
   "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
+  "enchantment.vampirism.arrow_frugality.desc": "Make your crossbow sometimes not consume an arrow when shooting. Chance increases with level",
+  "enchantment.vampirism.vampire_slayer.desc": "Increase damage dealt to vampiric creatures",
+  "enchantment.vampirism.crossbow_infinity.desc": "Makes your (non tech) crossbow shoot without consuming arrows",
   "text.vampirism.village.faction_capturing": "%s are capturing this village",
   "text.vampirism.village.faction_controlling": "%s are controlling this village",
   "text.vampirism.village.neutral": "Neutral village",
