--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -91,6 +91,12 @@
   "gui.vampirism.appearance": "Change your appearance",
   "gui.vampirism.appearance.fang": "Fang type",
   "gui.vampirism.appearance.eye": "Eye type",
+  "gui.vampirism.taskmaster.item_req": "Items to acquire",
+  "gui.vampirism.taskmaster.entity_req": "Entities to kill",
+  "gui.vampirism.taskmaster.stat_req": "Stats to achieve",
+  "gui.vampirism.taskmaster.complete_task": "Submit",
+  "gui.vampirism.taskmaster.requirement": "Requirement:",
+  "gui.vampirism.taskmaster.reward": "Reward:",
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
   "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
@@ -391,6 +397,7 @@
   "container.hunter": "Hunter",
   "container.hunter_table": "Hunter Table",
   "container.huntertrainer": "Hunter Trainer",
+  "container.vampirism.taskmaster": "Task Master",
   "__comment": "container/tileentity/screen_text",
   "text.vampirism.skills.gui_title": "Your skills",
   "text.vampirism.skills.points_left": "%d skill point(s) left",
@@ -627,6 +634,8 @@
   "command.vampirism.base.vampire_biome.parse_dist": "Failed to parse max distance. Using %s.",
   "__comment": "entities",
   "entity.vampirism.vampire_baron": "Vampire Baron",
+  "entity.vampirism.task_master_hunter": "Hunter Task Master",
+  "entity.vampirism.task_master_vampire": "Vampire Task Master",
   "__comment": "entities_text",
   "entity.vampirism.vampire_baron.level": " Level %s",
   "__comment": "old",
