--- a/src/main/resources/assets/vampirismguide/lang/en_us.json
+++ b/src/main/resources/assets/vampirismguide/lang/en_us.json
@@ -17,7 +17,7 @@
   "guide.vampirism.overview.dev": "Development",
   "guide.vampirism.overview.dev.text": "This mod is currently developed by Maxanier and translate by many helpful users. If you have some good Java knowledge and want to help please contact him. If not you still can help by translating, giving feedback or creating textures. For more information checkout the link on the side.",
   "guide.vampirism.overview.support": "Support the development",
-  "guide.vampirism.overview.support.text": "Developing this mod takes a lot of time and even I like it most of the time, there are a few things that are absolutly boring and sometimes I wonder if it is worth the trouble.\\n\\nIf you want to support the development and help me motivate myself please consider donating.\\nThere is a Patreon page where you can make a monthly donation and also can get some rewards, like appearing in the mod as advanced hunter or vampire. It is also possible to make one time donations on the CurseForge page.\\nIf you cannot or don't want to donate money, you can still checkout the \"Development\" section on how to help.",
+  "guide.vampirism.overview.support.text": "Developing this mod takes a lot of time and even I like it most of the time, there are a few things that are absolutely boring and sometimes I wonder if it is worth the trouble.\\n\\nIf you want to support the development and help me motivate myself please consider donating.\\nIt is possible to make one time donations on the CurseForge page.\\nIf you cannot or don't want to donate money, you can still checkout the 'Development' section on how to help.",
   "guide.vampirism.overview.credits": "Credits",
   "guide.vampirism.vampire.title": "Vampire",
   "guide.vampirism.vampire.getting_started": "Getting Started as Vampire",
