Miscellaneous guide book things

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -65,7 +65,7 @@
   "effect.vampirism.fire_protection": "Fire Protection",
   "effect.vampirism.garlic": "Garlic",
   "fluid.vampirism.vampirismblood": "Blood",
-  "fluid.vampirism.vampirismblood.vampirism": "Vampirim Blood",
+  "fluid.vampirism.vampirismblood.vampirism": "Vampirisms Blood",
   "fluid.vampirism.impure_vampirismblood": "Impure Blood",
   "fluid.vampirism.impure_vampirismblood.vampirism": "Vampirism Impure Blood",
   "gui.vampirism.hunter_weapon_table": "Hunter Weapon Table",
@@ -203,7 +203,7 @@
   "text.vampirism.integrations_available.first": "There is an integrations mod for Vampirism that adds enhanced compatibility for the following installed mods:",
   "text.vampirism.integrations_available.download": "Click here to go to the mod page",
   "text.vampirism.trainer_disabled": "I am not a hunter",
-  "text.vampirism.trainer_disabled_hunter": "It is not safe enought to train you here. Please free the village.",
+  "text.vampirism.trainer_disabled_hunter": "It is not safe enough to train you here. Please free the village.",
   "text.vampirism.actions.bind_action": "Bound action %s to action key %s",
   "text.vampirism.hunter.cured_sanguinare": "You have come to the right person. I have cured you of sanguinare",
   "category.vampirism.balance": "Balance settings",
