Task master finished
convert the taskmanager from general tasking to entity based tasking

add requirement progressing to TaskBoardScreen

fix save/load from nbt

- convert from entityId to UUID
- tooltip rendering at mouse position
- changing color scheme

colorize TaskBoardScreen

reformat & javadoc

add task abort button

reduce network traffic

some minor changes

Convert the taskmanager from general tasking to entity based tasking

change completable task color to green

Show already completed requirements

add multiple requirements for tasks

missing save/load nbt and additional task commands

Task master progress

remove task

fix

add lvl unlocker

minor changes & cleanup & javadoc
 - remove dummy tasks
 - rename ENTITY_TYPE to ENTITY_TAG
 - add translation keys for entity tags
 - remove unused methods
 - add DistMarker
 - add player parameter to TaskRequirement#getStat and TaskRequirement#getAmount

auto refresh of completed tasks

add EntityTypeRequirement

auto refresh of completed tasks

cleanup & entity tags

add EntityTypeRequirement

make TaskManager serverside only

Task master rendering

add TaskMasters to converted Villages

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -93,10 +93,17 @@
   "gui.vampirism.appearance.eye": "Eye type",
   "gui.vampirism.taskmaster.item_req": "Items to acquire",
   "gui.vampirism.taskmaster.entity_req": "Entities to kill",
+  "gui.vampirism.taskmaster.entity_tag_req": "Entity types to kill",
+  "gui.vampirism.taskmaster.bool_req": "Achieve",
   "gui.vampirism.taskmaster.stat_req": "Stats to achieve",
   "gui.vampirism.taskmaster.complete_task": "Submit",
-  "gui.vampirism.taskmaster.requirement": "Requirement:",
+  "gui.vampirism.taskmaster.accept_task": "Accept",
+  "gui.vampirism.taskmaster.abort_task": "Abort",
+  "gui.vampirism.taskmaster.requirement": "Requirement: ",
   "gui.vampirism.taskmaster.reward": "Reward:",
+  "gui.vampirism.taskmaster.text.vampirism_vampire": "Sire, if you are willing to help the local vampire community, there are several tasks you can complete. You will be rewarded upon completion and make yourself a name. Please browse the available task and accept any you like",
+  "gui.vampirism.taskmaster.text.vampirism_hunter": "Fellow hunter,\nto support the local hunter community, there are several tasks you can complete. You will be rewarded upon completion. Please browse the available tasks and accept any you like.",
+  "gui.vampirism.taskmaster.not_accepted": "Not accepted yet",
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
   "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
@@ -234,6 +241,11 @@
   "text.vampirism.hunter.cured_sanguinare": "You have come to the right person. I have cured you of sanguinare",
   "text.vampirism.hunter_minion.equipment_upgrade": "Thank you for the upgraded equipement. I can now carry more items and am stronger.",
   "text.vampirism.hunter_minion.equipment_wrong": "I already have this equipment",
+  "text.vampirism.taskmaster.no_tasks": "No tasks available at the moment",
+  "text.vampirism.taskmaster.no_tasks_unique": "There are no task left",
+  "__comment": "task_entity_tags",
+  "tasks.vampirism.vampirism:hunter": "Hunter entities",
+  "tasks.vampirism.vampirism:vampire": "Vampire entities",
   "category.vampirism.balance": "Balance settings",
   "category.vampirism.balance.tooltip": "Change almost any balance relevant property",
   "category.vampirism.balance_general": "General",
