Minion screen and container Minion armor layer Modify minion data client sync.

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -81,6 +81,9 @@
   "gui.vampirism.alchemical_cauldron.skill": "Required Skill: %s",
   "gui.vampirism.name_sword.title": "Sword Name",
   "gui.vampirism.name_sword.text": "Do you want to give this sword a name?",
+  "gui.vampirism.minion.appearance": "Change minion appearance",
+  "gui.vampirism.minion.lock_action": "Ignore global commands",
+  "gui.vampirism.minion.active_task": "Current task",
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
   "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
@@ -636,10 +639,11 @@
   "minioncommand.vampirism.attackhostile": "Attack hostile including player",
   "minioncommand.vampirism.collectblood": "Collect blood",
   "minioncommand.vampirism.defendlord": "Defend lord",
-  "minioncommand.vampirism.stayhere": "Stay here",
+  "minioncommand.vampirism.stay": "Stay here",
   "minioncommand.vampirism.comeback": "Come back (Remote minions)",
-  "minioncommand.vampirism.justfollow": "Just follow me",
+  "minioncommand.vampirism.follow": "Follow",
   "minioncommand.vampirism.converttosaveable": "Take Gem of Binding back",
-  "minioncommand.vampirism.defendarea": "Defend area",
+  "minioncommand.vampirism.defend_area": "Defend area",
+  "minioncommand.vampirism.none": "None",
   "text.vampirism.minion.can_respawn": "My lord, I have recovered (%s)"
 }
