Allow putting impure blood in blood container. Add impure blood rendering for blood container. Add fluid tooltip to blood container item. Change impure blood texture. Close #706

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -64,10 +64,10 @@
   "effect.vampirism.sanguinare": "Sanguinare Vampiris",
   "effect.vampirism.fire_protection": "Fire Protection",
   "effect.vampirism.garlic": "Garlic",
-  "fluid.vampirism.vampirismblood": "Blood",
-  "fluid.vampirism.vampirismblood.vampirism": "Vampirisms Blood",
-  "fluid.vampirism.impure_vampirismblood": "Impure Blood",
-  "fluid.vampirism.impure_vampirismblood.vampirism": "Vampirism Impure Blood",
+  "fluid.vampirism.blood": "Blood",
+  "fluid.vampirism.blood.vampirism": "Vampirisms Blood",
+  "fluid.vampirism.impure_blood": "Impure Blood",
+  "fluid.vampirism.impure_blood.vampirism": "Vampirism Impure Blood",
   "gui.vampirism.hunter_weapon_table": "Hunter Weapon Table",
   "gui.vampirism.hunter_weapon_table.level": "Required Hunter Level: %s",
   "gui.vampirism.hunter_weapon_table.skill": "Required Skill: %s",
