Extend skill descriptions. Close #709

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -240,19 +240,31 @@
   "category.vampirism.worldgen": "World Generation",
   "__comment": "actions",
   "action.vampirism.bat": "Toggle Batmode",
+  "action.vampirism.bat.desc": "Turn into a bat and fly away",
   "action.vampirism.freeze": "Freeze",
+  "action.vampirism.freeze.desc": "Temporarily freeze all nearby entities",
   "action.vampirism.vampire_invisibility": "Invisibility",
   "action.vampirism.regen": "Regeneration",
+  "action.vampirism.regen.desc": "Temporarily regenerate health faster but use more blood",
   "action.vampirism.revive_fallen": "Revive Fallen",
   "action.vampirism.summon_bat": "Summon Bats",
+  "action.vampirism.summon_bat.desc": "Summon a bat swarm around you that blinds any player that touches it",
   "action.vampirism.teleport": "Teleport",
+  "action.vampirism.teleport.desc": "Quickly teleport to the spot you are looking at",
   "action.vampirism.vampire_rage": "Vampire Rage",
+  "action.vampirism.vampire_rage.desc": "In rage mode you are much faster and deal more damage but consume more blood",
   "action.vampirism.sunscreen": "Sunscreen",
+  "action.vampirism.sunscreen.desc": "Temporarily remove any sun damage",
   "action.vampirism.disguise_vampire": "Disguise",
+  "action.vampirism.disguise_vampire.desc": "Temporarily disguise as a non vampire to trick mobs and players",
   "action.vampirism.disguise_hunter": "Disguise",
+  "action.vampirism.disguise_hunter.desc": "Temporarily significantly reduce your detection and visibility radius towards mobs and players.",
   "action.vampirism.dark_blood_projectile": "Dark Blood Projectile",
+  "action.vampirism.dark_blood_projectile.desc": "Fire a blood projectile that deals damage",
   "action.vampirism.half_invulnerable": "Damage Limiter",
+  "action.vampirism.half_invulnerable.desc": "Action which blocks large damages but slows you down",
   "action.vampirism.awareness_hunter": "Vampire Awareness",
+  "action.vampirism.awareness_hunter.desc": "Action to sense nearby vampire players or entities",
   "__comment": "skills",
   "skill.vampirism.vampire": "Becoming a vampire",
   "skill.vampirism.creeper_avoided": "Avoided by creepers",
@@ -295,10 +307,12 @@
   "skill.vampirism.purified_garlic": "Purified Garlic",
   "skill.vampirism.holy_water_enhanced": "Enhanced Holy Water",
   "skill.vampirism.garlic_beacon_improved": "Improved diffuser",
-  "skill.vampirism.awareness": "Sense nearby vampire players or entities",
+  "skill.vampirism.vampire_speed": "Permanent speed boost",
+  "skill.vampirism.vampire_jump": "Permanent jump boost",
   "__comment": "skill_desc",
   "skill.vampirism.freeze.desc": "Temporarily freeze all nearby creatures",
   "skill.vampirism.blood_vision.desc": "Allows you to see entities through walls in the dark. Toggle with key.",
+  "skill.vampirism.blood_vision_garlic.desc": "Additionally identify entities with poisonous blood",
   "skill.vampirism.advanced_biter.desc": "Allows you to suck blood more efficiently and stop at the right moment. Also increases your bite damage.",
   "skill.vampirism.more_bite_damage.desc": "Deal more damage when biting",
   "skill.vampirism.less_blood_thirst.desc": "Decreases your thirst for blood",
@@ -311,6 +325,8 @@
   "skill.vampirism.summon_bats.desc": "Summon a lot of bats around you while in bat mode to distract enemies",
   "skill.vampirism.sunscreen.desc": "Grants temporary immunity from direct sundamage. Has a long cooldown.",
   "skill.vampirism.garlic_blood_vision.desc": "Allows you to additionally detect entities with poisonous blood",
+  "skill.vampirism.enhanced_armor.desc": "Unlock crafting enhanced versions of hunter armors",
+  "skill.vampirism.hunter_attack_speed_advanced.desc": "Reduce your attack cooldown even further",
   "skill.vampirism.weapon_table.desc": "Learn how to use the Hunter Weapon Table",
   "skill.vampirism.double_crossbow.desc": "Unlocks Double Crossbow",
   "skill.vampirism.enhanced_crossbow.desc": "Learn how to enhance your crossbows",
