--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -144,6 +144,7 @@
   "death.attack.holy_water": "%1$s was burned with holy water",
   "death.attack.holy_water.player": "%2$s burned %1$s with holy water",
   "death.attack.blood_loss": "%1$s was sucked dry",
+  "death.minion.on_behalf": "on behalf of %1$s",
   "text.vampirism.skill.level_to_low": "Your vampire level is too low for that",
   "text.vampirism.skill.cooldown_not_over": "Please wait until the cooldown is over",
   "text.vampirism.not_enough_blood": "There is not enough blood in the altar",
