Minion appearance screen adjust ScrollableListButton to better design move skillscreen icons

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -84,6 +84,13 @@
   "gui.vampirism.minion.appearance": "Change minion appearance",
   "gui.vampirism.minion.lock_action": "Ignore global commands",
   "gui.vampirism.minion.active_task": "Current task",
+  "gui.vampirism.minion_appearance": "Change the minions appearance",
+  "gui.vampirism.minion_appearance.skin": "Skin type",
+  "gui.vampirism.minion_appearance.hat": "Hat type",
+  "gui.vampirism.minion_appearance.use_lord_skin": "Use lord skin",
+  "gui.vampirism.appearance": "Change your appearance",
+  "gui.vampirism.appearance.fang": "Fang type",
+  "gui.vampirism.appearance.eye": "Eye type",
   "enchantment.vampirism.arrow_frugality": "Arrow Frugality",
   "enchantment.vampirism.vampire_slayer": "Vampire Slayer",
   "enchantment.vampirism.crossbow_infinity": "Crossbow Infinity",
